@@ -4,6 +4,7 @@
 	- Unbound control port number is registered with IANA:
 	  ub-dns-control  8953/tcp    unbound dns nameserver control
 	  This is the new default for the control-port config setting.
+	- statistics-interval prints the number of jostled queries to log.
 
 30 May 2011: Wouter
 	- Fix Makefile for U in environment, since wrong U is more common than
